add azure pipeline

--- a/cleanning.ipynb
+++ b/cleanning.ipynb
@@ -883,9 +883,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'DefaultAzureCredential' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# Create the AzureAppConfiguration client\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m credential \u001b[39m=\u001b[39m DefaultAzureCredential()\n\u001b[1;32m      3\u001b[0m appconfig_conn_str \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mEndpoint=https://app-co2-config.azconfig.io;Id=8/Iv;Secret=8qfVLXI2aDt1Wg0jPMnCLx5lHIDvdAuzucBti8of7+M=\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m      4\u001b[0m appconfig_client \u001b[39m=\u001b[39m AzureAppConfigurationClient\u001b[39m.\u001b[39mfrom_connection_string(connection_string\u001b[39m=\u001b[39mappconfig_conn_str)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'DefaultAzureCredential' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Create the AzureAppConfiguration client\n",
     "credential = DefaultAzureCredential()\n",
