ML model + pickle

--- a/model-multioutput.ipynb
+++ b/model-multioutput.ipynb
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,9 @@
     "from sklearn.multioutput import MultiOutputRegressor\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.metrics import r2_score, mean_squared_error\n",
-    "from sklearn.model_selection import GridSearchCV\n"
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "import pickle\n"
    ]
   },
   {
@@ -738,6 +740,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prédiction"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 85,
    "metadata": {},
@@ -879,11 +888,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'''with open('model.pickle', 'wb') as f:\n",
+    "    pickle.dump(model_tm, f)\n",
+    "\n",
+    "f.close()'''\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''with open('model.pickle', 'rb') as f:\n",
+    "    loaded_model = pickle.load(f)\n",
+    "\n",
+    "f.close()'''\n"
+   ]
   }
  ],
  "metadata": {
