last update super table

--- a/cleanning.ipynb
+++ b/cleanning.ipynb
@@ -610,15 +610,15 @@
    "source": [
     "\n",
     "# Convert kBtu to kWh in the Electricity column\n",
-    "df[\"Electricity(kWh)\"] = df[\"Electricity(kBtu)\"] * 0.29307107\n",
+    "df[\"ElectricitykWh\"] = df[\"Electricity(kBtu)\"] * 0.29307107\n",
     "# Convert kBtu to kWh in the SteamUse column\n",
-    "df['SteamUse(kWh)'] = df['SteamUse(kBtu)'] * 0.29307107\n",
+    "df['SteamUsekWh'] = df['SteamUse(kBtu)'] * 0.29307107\n",
     "# Convert kBtu to kWh in the SteamUse column\n",
-    "df['NaturalGas(kWh)'] = df['NaturalGas(kBtu)'] * 0.29307107\n",
+    "df['NaturalGaskWh'] = df['NaturalGas(kBtu)'] * 0.29307107\n",
     "# Convert kBtu to kWh in the SteamUse column\n",
-    "df['SiteEnergyUse(kWh)'] = df['SiteEnergyUse(kBtu)'] * 0.29307107\n",
+    "df['SiteEnergyUsekWh'] = df['SiteEnergyUse(kBtu)'] * 0.29307107\n",
     "# Convert sqrt feet in m²\n",
-    "df['PropertyGFABuilding(s)'] = df['PropertyGFABuilding(s)'] * 0.092903"
+    "df['propertygfabuildings'] = df['propertygfabuildings'] * 0.092903"
    ]
   },
   {
