--- a/test.ipynb
+++ b/test.ipynb
@@ -22,7 +22,7 @@
     "from azure.appconfiguration import AzureAppConfigurationClient\n",
     "\n",
     "import pandas as pd\n",
-    "from sodapy import Socrata"
+    "from sodapy import Socrata\n"
    ]
   },
   {
@@ -1445,47 +1445,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'scipy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[18], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mscipy\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mstats\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mstats\u001b[39;00m\n\u001b[1;32m      3\u001b[0m fig, axes \u001b[39m=\u001b[39m plt\u001b[39m.\u001b[39msubplots(nrows\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m, ncols\u001b[39m=\u001b[39m\u001b[39m2\u001b[39m, sharex\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, sharey\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, figsize\u001b[39m=\u001b[39m(\u001b[39m20\u001b[39m,\u001b[39m8\u001b[39m))\n\u001b[1;32m      4\u001b[0m left, width \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'scipy'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "steamuse_kbtu\n",
+      "electricity_kwh\n",
+      "electricity_kbtu\n"
      ]
     }
    ],
    "source": [
-    "import scipy.stats as stats\n",
-    "\n",
-    "fig, axes = plt.subplots(nrows=1, ncols=2, sharex=False, sharey=False, figsize=(20,8))\n",
-    "left, width = 0, 1\n",
-    "bottom, height = 0, 1\n",
-    "right = left + width\n",
-    "top = bottom + height\n",
-    "\n",
-    "sns.histplot(data=data, x=\"TotalGHGEmissions\", kde=True, ax=axes[0], color=\"#9C3E2D\", alpha=0.6)\n",
-    "axes[0].set_title(\"Données d'emission de CO2 globales\", color='#2cb7b0')\n",
-    "\n",
-    "#Test de Kolmogorov-Smirnov\n",
-    "kstest = stats.kstest(data['TotalGHGEmissions'].notnull(),'norm')\n",
-    "axes[0].text(right, top, 'Test Kolmogorov-Smirnov \\n Pvalue: {:.2} \\n Stat: {:.2}'.format(kstest.pvalue, kstest.statistic),\n",
-    "            horizontalalignment='right',\n",
-    "            verticalalignment='top',\n",
-    "            style='italic', transform=axes[0].transAxes, fontsize = 12,\n",
-    "            bbox={'facecolor':'#00afe6', 'alpha':0.5, 'pad':0})\n",
-    "\n",
-    "sns.histplot(data=data[(data['TotalGHGEmissions']< 1000)], x=\"TotalGHGEmissions\", kde=True, ax=axes[1], color=\"#9C3E2D\", alpha=0.6)\n",
-    "axes[1].set_title(\"Données d'emission de CO2 zoomées\", color='#2cb7b0')\n",
-    "\n",
-    "plt.suptitle(\"Distribution des emissions de CO2 relevées (2015-2016)\", \n",
-    "             fontdict=font_title, fontsize=22)\n",
-    "plt.show()"
+    "for col in df_num.iloc[:, 19:22]:\n",
+    "  # Perform operations on each column\n",
+    "  print(df_num[col].name)"
    ]
   }
  ],
