--- a/test.ipynb
+++ b/test.ipynb
@@ -583,12 +583,12 @@
     "    'largestpropertyusetype': 'string',\n",
     "    'largestpropertyusetypegfa': pd.Int32Dtype(),\n",
     "    'energystarscore': 'float',\n",
-    "    'siteeui_kbtu_sf': 'float',\n",
-    "    'siteeuiwn_kbtu_sf': 'float',\n",
-    "    'sourceeui_kbtu_sf': 'float',\n",
-    "    'sourceeuiwn_kbtu_sf': 'float',\n",
-    "    'siteenergyuse_kbtu': 'float',\n",
-    "    'siteenergyusewn_kbtu': 'float',\n",
+    "    'siteeuikbtusf': 'float',\n",
+    "    'siteeuiwnkbtusf': 'float',\n",
+    "    'sourceeuikbtusf': 'float',\n",
+    "    'sourceeuiwnkbtusf': 'float',\n",
+    "    'siteenergyusekbtu': 'float',\n",
+    "    'siteenergyusewnkbtu': 'float',\n",
     "    'steamuse_kbtu': 'float',\n",
     "    'electricity_kwh': 'float',\n",
     "    'electricity_kbtu': 'float',\n",
