--- a/model-multioutput.ipynb
+++ b/model-multioutput.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -8,6 +9,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -31,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-14T14:59:28.213755441Z",
@@ -40,14 +42,243 @@
    },
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "from utils import db_azure_connect, get_sod_data, haversine_distance, calculate_angle\n",
+    "from sqlalchemy import create_engine, types, text\n",
+    "\n",
+    "from sqlalchemy import create_engine, types\n",
+    "from azure.identity import DefaultAzureCredential\n",
+    "from azure.appconfiguration import AzureAppConfigurationClient"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## 2. Import du dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<sqlalchemy.engine.base.Connection object at 0x7fe43fb485e0>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>?column?</th>\n",
+       "      <th>?column?</th>\n",
+       "      <th>?column?</th>\n",
+       "      <th>?column?</th>\n",
+       "      <th>?column?</th>\n",
+       "      <th>?column?</th>\n",
+       "      <th>?column?</th>\n",
+       "      <th>?column?</th>\n",
+       "      <th>?column?</th>\n",
+       "      <th>?column?</th>\n",
+       "      <th>?column?</th>\n",
+       "      <th>?column?</th>\n",
+       "      <th>?column?</th>\n",
+       "      <th>?column?</th>\n",
+       "      <th>?column?</th>\n",
+       "      <th>?column?</th>\n",
+       "      <th>?column?</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>log_totalghgemissions</td>\n",
+       "      <td>log_siteenergyusekwh</td>\n",
+       "      <td>haversinedistance</td>\n",
+       "      <td>angle</td>\n",
+       "      <td>datayear</td>\n",
+       "      <td>electricitykbtu</td>\n",
+       "      <td>naturalgaskbtu</td>\n",
+       "      <td>energystarscore</td>\n",
+       "      <td>is_using_electricitykWh</td>\n",
+       "      <td>is_using_naturalgaskWh</td>\n",
+       "      <td>is_using_steamusekWh</td>\n",
+       "      <td>largestpropertyusetypegfa</td>\n",
+       "      <td>numberofbuildings</td>\n",
+       "      <td>numberoffloors</td>\n",
+       "      <td>propertygfabuildings</td>\n",
+       "      <td>buildingtype</td>\n",
+       "      <td>primarypropertytype</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>log_totalghgemissions</td>\n",
+       "      <td>log_siteenergyusekwh</td>\n",
+       "      <td>haversinedistance</td>\n",
+       "      <td>angle</td>\n",
+       "      <td>datayear</td>\n",
+       "      <td>electricitykbtu</td>\n",
+       "      <td>naturalgaskbtu</td>\n",
+       "      <td>energystarscore</td>\n",
+       "      <td>is_using_electricitykWh</td>\n",
+       "      <td>is_using_naturalgaskWh</td>\n",
+       "      <td>is_using_steamusekWh</td>\n",
+       "      <td>largestpropertyusetypegfa</td>\n",
+       "      <td>numberofbuildings</td>\n",
+       "      <td>numberoffloors</td>\n",
+       "      <td>propertygfabuildings</td>\n",
+       "      <td>buildingtype</td>\n",
+       "      <td>primarypropertytype</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>log_totalghgemissions</td>\n",
+       "      <td>log_siteenergyusekwh</td>\n",
+       "      <td>haversinedistance</td>\n",
+       "      <td>angle</td>\n",
+       "      <td>datayear</td>\n",
+       "      <td>electricitykbtu</td>\n",
+       "      <td>naturalgaskbtu</td>\n",
+       "      <td>energystarscore</td>\n",
+       "      <td>is_using_electricitykWh</td>\n",
+       "      <td>is_using_naturalgaskWh</td>\n",
+       "      <td>is_using_steamusekWh</td>\n",
+       "      <td>largestpropertyusetypegfa</td>\n",
+       "      <td>numberofbuildings</td>\n",
+       "      <td>numberoffloors</td>\n",
+       "      <td>propertygfabuildings</td>\n",
+       "      <td>buildingtype</td>\n",
+       "      <td>primarypropertytype</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>log_totalghgemissions</td>\n",
+       "      <td>log_siteenergyusekwh</td>\n",
+       "      <td>haversinedistance</td>\n",
+       "      <td>angle</td>\n",
+       "      <td>datayear</td>\n",
+       "      <td>electricitykbtu</td>\n",
+       "      <td>naturalgaskbtu</td>\n",
+       "      <td>energystarscore</td>\n",
+       "      <td>is_using_electricitykWh</td>\n",
+       "      <td>is_using_naturalgaskWh</td>\n",
+       "      <td>is_using_steamusekWh</td>\n",
+       "      <td>largestpropertyusetypegfa</td>\n",
+       "      <td>numberofbuildings</td>\n",
+       "      <td>numberoffloors</td>\n",
+       "      <td>propertygfabuildings</td>\n",
+       "      <td>buildingtype</td>\n",
+       "      <td>primarypropertytype</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>log_totalghgemissions</td>\n",
+       "      <td>log_siteenergyusekwh</td>\n",
+       "      <td>haversinedistance</td>\n",
+       "      <td>angle</td>\n",
+       "      <td>datayear</td>\n",
+       "      <td>electricitykbtu</td>\n",
+       "      <td>naturalgaskbtu</td>\n",
+       "      <td>energystarscore</td>\n",
+       "      <td>is_using_electricitykWh</td>\n",
+       "      <td>is_using_naturalgaskWh</td>\n",
+       "      <td>is_using_steamusekWh</td>\n",
+       "      <td>largestpropertyusetypegfa</td>\n",
+       "      <td>numberofbuildings</td>\n",
+       "      <td>numberoffloors</td>\n",
+       "      <td>propertygfabuildings</td>\n",
+       "      <td>buildingtype</td>\n",
+       "      <td>primarypropertytype</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                ?column?              ?column?           ?column? ?column?   \n",
+       "0  log_totalghgemissions  log_siteenergyusekwh  haversinedistance    angle  \\\n",
+       "1  log_totalghgemissions  log_siteenergyusekwh  haversinedistance    angle   \n",
+       "2  log_totalghgemissions  log_siteenergyusekwh  haversinedistance    angle   \n",
+       "3  log_totalghgemissions  log_siteenergyusekwh  haversinedistance    angle   \n",
+       "4  log_totalghgemissions  log_siteenergyusekwh  haversinedistance    angle   \n",
+       "\n",
+       "   ?column?         ?column?        ?column?         ?column?   \n",
+       "0  datayear  electricitykbtu  naturalgaskbtu  energystarscore  \\\n",
+       "1  datayear  electricitykbtu  naturalgaskbtu  energystarscore   \n",
+       "2  datayear  electricitykbtu  naturalgaskbtu  energystarscore   \n",
+       "3  datayear  electricitykbtu  naturalgaskbtu  energystarscore   \n",
+       "4  datayear  electricitykbtu  naturalgaskbtu  energystarscore   \n",
+       "\n",
+       "                  ?column?                ?column?              ?column?   \n",
+       "0  is_using_electricitykWh  is_using_naturalgaskWh  is_using_steamusekWh  \\\n",
+       "1  is_using_electricitykWh  is_using_naturalgaskWh  is_using_steamusekWh   \n",
+       "2  is_using_electricitykWh  is_using_naturalgaskWh  is_using_steamusekWh   \n",
+       "3  is_using_electricitykWh  is_using_naturalgaskWh  is_using_steamusekWh   \n",
+       "4  is_using_electricitykWh  is_using_naturalgaskWh  is_using_steamusekWh   \n",
+       "\n",
+       "                    ?column?           ?column?        ?column?   \n",
+       "0  largestpropertyusetypegfa  numberofbuildings  numberoffloors  \\\n",
+       "1  largestpropertyusetypegfa  numberofbuildings  numberoffloors   \n",
+       "2  largestpropertyusetypegfa  numberofbuildings  numberoffloors   \n",
+       "3  largestpropertyusetypegfa  numberofbuildings  numberoffloors   \n",
+       "4  largestpropertyusetypegfa  numberofbuildings  numberoffloors   \n",
+       "\n",
+       "               ?column?      ?column?             ?column?  \n",
+       "0  propertygfabuildings  buildingtype  primarypropertytype  \n",
+       "1  propertygfabuildings  buildingtype  primarypropertytype  \n",
+       "2  propertygfabuildings  buildingtype  primarypropertytype  \n",
+       "3  propertygfabuildings  buildingtype  primarypropertytype  \n",
+       "4  propertygfabuildings  buildingtype  primarypropertytype  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "credential = DefaultAzureCredential()\n",
+    "appconfig_conn_str = \"Endpoint=https://app-co2-config.azconfig.io;Id=8/Iv;Secret=8qfVLXI2aDt1Wg0jPMnCLx5lHIDvdAuzucBti8of7+M=\"\n",
+    "appconfig_client = AzureAppConfigurationClient.from_connection_string(connection_string=appconfig_conn_str)\n",
+    "\n",
+    "# Retrieve the connection string from Azure App Configuration\n",
+    "setting = appconfig_client.get_configuration_setting(key=\"pg-connect-string\")\n",
+    "secret_value = setting.value\n",
+    "\n",
+    "# Create the SQLAlchemy engine\n",
+    "engine = create_engine(secret_value)\n",
+    "data_year = 2016\n",
+    "with engine.begin() as conn:\n",
+    "        print(conn)\n",
+    "        dataset = conn.execute(text(f\"\"\"SELECT 'log_totalghgemissions', 'log_siteenergyusekwh', 'haversinedistance',\n",
+    "           'angle', 'datayear', 'electricitykbtu', 'naturalgaskbtu', 'energystarscore',\n",
+    "           'is_using_electricitykWh', 'is_using_naturalgaskWh', 'is_using_steamusekWh',\n",
+    "           'largestpropertyusetypegfa', 'numberofbuildings', 'numberoffloors', 'propertygfabuildings', 'buildingtype', 'primarypropertytype' FROM \"super_table_tm\" WHERE \"datayear\"='{data_year}'  \"\"\"))\n",
+    "dataset.head()"
    ]
   },
   {
@@ -82,6 +313,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -219,6 +451,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -274,6 +507,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -476,6 +710,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -740,6 +975,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -888,6 +1124,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -935,7 +1172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
